tests/fixtures/invalid/pow_str_none_set.py
# Cannot call pow() with Str, None, Set[int]
x = pow("hello", None, {1, 2, 3})
